<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Botones</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btAcept">Aceptar</string>
    <string name="btCancelar">Cancelar</string>
    <string name="bt1">Boton1</string>
    <string name="bt2">Boton2</string>
    <string name="bt3">Boton3</string>

</resources>
