<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btAcept"
        android:id="@+id/bt_Aceptar"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btCancelar"
        android:id="@+id/bt_Cancelar"
        android:layout_alignTop="@+id/bt_Aceptar"
        android:layout_alignParentEnd="true"
        android:onClick="clickCancelar" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt2"
        android:id="@+id/bt_2"
        android:layout_marginTop="66dp"
        android:layout_below="@+id/bt_Aceptar"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt1"
        android:id="@+id/bt_1"
        android:layout_alignTop="@+id/bt_2"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt3"
        android:id="@+id/bt_3"
        android:layout_alignTop="@+id/bt_2"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
